# SEQI-Agent

./: .gitignore  README.md  Test.ipynb  main.py  pyproject.toml
scripts/: check.sh  trace_to_fixture.py
src/: __init__.py  action_agent.py  langgraph_terminal_agent.py  llm_single_loop_agent.py  model_config.py  multi_step_agent.py  patch_verify_agent.py
src/terminal_agent/: __init__.py  agent.py  constants.py  formatting.py  streaming.py  tools.py  trace_replay.py  types.py
src/terminal_agent/toolkit/: __init__.py  build.py  edit.py  extension.py  inspect.py  repo.py  schemas.py  verify.py  web.py
tests/: test_agent_evidence.py  test_trace_replay.py  trace_replay_fixtures.py
